<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp" >

            <ImageView
                android:id="@+id/DetailDrugImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/drugImg" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_name"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="10dip"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_company"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="10dip"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_color"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dip"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_split"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_split"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dip"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_shape"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_shape"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dip"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_ushape"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_ushape"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dip"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#6666cc"
                        android:gravity="center"
                        android:padding="10dip"
                        android:text="@string/d_mark"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_mark"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:padding="10dip"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/safe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@layout/back"
                    android:padding="10dip"
                    android:text="@string/d_safety"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/d_safety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/safe"
                    android:padding="10dip"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/ingre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_safety"
                    android:background="@layout/back"
                    android:padding="10dip"
                    android:text="@string/d_incredient"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/d_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ingre"
                    android:padding="10dip"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/effe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/d_ingredient"
                    android:background="@layout/back"
                    android:padding="10dip"
                    android:text="@string/d_effect"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/d_effect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/effe"
                    android:padding="10dip"
                    android:textSize="15sp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>